--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,24 +1,16 @@
-name: Android CI
+ame: build
 
-on:
+on: 
   push:
-  pull_request:
 
-jobs:
-  build:
-
-    runs-on: ubuntu-latest
-
-    steps:
-    - uses: actions/checkout@v2
-    - name: set up JDK 11
-      uses: actions/setup-java@v2
-      with:
-        java-version: '11'
-        distribution: 'adopt'
-        cache: gradle
-
-    - name: Grant execute permission for gradlew
-      run: chmod +x gradlew
-    - name: Build with Gradle
-      run: ./gradlew build
+jobs: 
+  build: 
+    inputs:
+      url:
+        required: true
+        default: 'https://example.com'
+    runs:
+      using: 'docker'
+      image: 'Dockerfile'
+      args:
+        - make tailscale-debug.apk
