--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,16 +1,16 @@
-ame: build
+name: Docker Image CI
 
-on: 
+on:
   push:
+  pull_request:
 
-jobs: 
-  build: 
-    inputs:
-      url:
-        required: true
-        default: 'https://example.com'
-    runs:
-      using: 'docker'
-      image: 'Dockerfile'
-      args:
-        - make tailscale-debug.apk
+jobs:
+
+  build:
+
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v2
+    - name: Build the Docker image
+      run: docker build . --file Dockerfile --tag tailscale-android:$(date +%s)
